# voxd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
heard/: cli.py  intent.py  stt.py
heard/tools/: apps.py  media.py  registry.py  system_query.py  types.py  volume.py  window.py  workspace.py
heard/tools/helpers/: apps.py  network.py  system.py
scripts/: benchmark_latency.py
tests/: conftest.py  test_apps.py  test_cli.py  test_helpers_apps.py  test_helpers_network.py  test_helpers_system.py  test_intent.py  test_media.py  test_package.py  test_registry.py  test_shell_allowlist.py  test_stt.py  test_system_query.py  test_types.py  test_volume.py  test_window.py  test_workspace.py
voxd/tools/: apps.py  media.py  registry.py  system_query.py  window.py
